--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -250,6 +250,10 @@ libspice_client_glib_2_0_la_SOURCES =			\
 	spice-uri-priv.h				\
 	usb-device-manager.c				\
 	usb-device-manager-priv.h			\
+	usb-backend-common.c                            \
+	usb-backend.h                                   \
+	cd-usb-bulk-msd.c                            \
+	cd-usb-bulk-msd.h                                   \
 	usbutil.c					\
 	usbutil.h					\
 	$(USB_ACL_HELPER_SRCS)				\
