.gitmodules file changed - for daynix only!
changed url for spice-common to avoid getting it from daynix repo
both submodules configured to ignore them in diff

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "spice-common"]
 	path = spice-common
-	url = ../spice-common
+	url = https://anongit.freedesktop.org/git/spice/spice-common
+	ignore = dirty
 [submodule "src/keycodemapdb"]
+	ignore = dirty
 	path = src/keycodemapdb
 	url = https://gitlab.com/keycodemap/keycodemapdb.git
