--- a/Makefile.am
+++ b/Makefile.am
@@ -25,7 +25,11 @@ endif
 DISTCLEANFILES = $(pkgconfig_DATA)
 
 EXTRA_DIST =					\
+	meson.build				\
+	meson_options.txt			\
+	po/meson.build				\
 	build-aux/git-version-gen		\
+	build-aux/meson/check-spice-common	\
 	gtk-doc.make				\
 	.version				\
 	$(NULL)
