--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: fedora:latest
 before_script:
   - >
     dnf install 'dnf-command(copr)' git libtool make redhat-rpm-config
-    python3 python3-six python3-pyparsing
+    python3 python3-six python3-pyparsing meson ninja-build
     -y
   - dnf copr enable @spice/nightly -y
   - dnf builddep spice-gtk -y
@@ -13,6 +13,12 @@ makecheck:
   - ./autogen.sh --enable-static
   - make -j4
   - make check
+
+makecheck-meson:
+  script:
+  - meson build || (cat build/meson-logs/meson-log.txt && exit 1)
+  - ninja -C build
+  - (cd build && meson test) || (cat build/meson-logs/testlog.txt && exit 1)
 
 makecheck_simple:
   script:
@@ -29,3 +35,17 @@ makecheck_simple:
         --enable-dbus=no
   - make -j4
   - make check
+
+makecheck_simple-meson:
+  script:
+  - meson build -Dlz4=false
+                -Dgstaudio=false
+                -Dgstvideo=false
+                -Dwebdav=false
+                -Dsasl=false
+                -Dpulse=false
+                -Dsmartcard=false
+                -Dusbredir=false
+                -Ddbus=false || (cat build/meson-logs/meson-log.txt && exit 1)
+  - ninja -C build
+  - (cd build && meson test) || (cat build/meson-logs/testlog.txt && exit 1)
