usb-backend: move system-dependent procedure to separate files
added 3 files with definitions/implementation of system-dependent
procedures related to access to CD devices.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -251,12 +251,15 @@ libspice_client_glib_2_0_la_SOURCES =			\
 	spice-uri-priv.h				\
 	usb-device-manager.c				\
 	usb-device-manager-priv.h			\
-	usb-backend-common.c                            \
-	usb-backend.h                                   \
-	cd-usb-bulk-msd.c                    \
-	cd-usb-bulk-msd.h                    \
-	cd-scsi.c                            \
-	cd-scsi.h                            \
+	usb-backend-common.c                \
+	usb-backend.h                       \
+	cd-usb-bulk-msd.c                   \
+	cd-usb-bulk-msd.h                   \
+	cd-scsi.c                           \
+	cd-scsi.h                           \
+	cd-device.h                         \
+	cd-device-win.c                     \
+	cd-device-linux.c                   \
 	usbutil.c					\
 	usbutil.h					\
 	$(USB_ACL_HELPER_SRCS)				\
