--- a/src/meson.build
+++ b/src/meson.build
@@ -32,6 +32,7 @@ spice_client_glib_headers = [
   'channel-smartcard.h',
   'channel-usbredir.h',
   'channel-webdav.h',
+  'qmp-port.h',
   'smartcard-manager.h',
   'spice-audio.h',
   'spice-channel.h',
@@ -70,6 +71,7 @@ spice_client_glib_introspection_sources = [
   'channel-smartcard.c',
   'channel-usbredir.c',
   'channel-webdav.c',
+  'qmp-port.c',
   'smartcard-manager.c',
   'spice-audio.c',
   'spice-channel.c',
@@ -98,6 +100,8 @@ spice_client_glib_sources = [
   'decode-zlib.c',
   'gio-coroutine.c',
   'gio-coroutine.h',
+  'qmp-port.c',
+  'qmp-port.h',
   'smartcard-manager-priv.h',
   'spice-audio-priv.h',
   'spice-channel-cache.h',
