--- a/configure.ac
+++ b/configure.ac
@@ -173,6 +173,8 @@ PKG_CHECK_MODULES(CAIRO, cairo >= 1.2.0)
 
 PKG_CHECK_MODULES(GTHREAD, gthread-2.0)
 
+PKG_CHECK_MODULES(JSON, json-glib-1.0)
+
 AC_ARG_ENABLE([webdav],
   AS_HELP_STRING([--enable-webdav=@<:@auto/yes/no@:>@],
                  [Enable webdav support @<:@default=auto@:>@]),
