cd-sharing: Implementation of CD sharing feature
This commit contains modified files related to CD sharing feature.
The feature adds ability to share one or more CD images
(or local CD-DVD devices) with the guest by emulating
USB CD devices connected to guest system.

Prerequisites:
   Guest system shall have USB2 or USB3 controller and one or more
   USB redirection channels. Each emulated CD device currently
   uses one USB redirection channel.
Usage from GUI:
   New USB device redirection widget includes 'Add CD' button that
   allows selection of ISO file which will be used for emulation
   of USB CD drive.
Usage from command line:
   Added command line option '--spice-share-cd=filename' which
   allows to create one or more emulated CD drives.
Sharing local CD drive:
   For sharing local CD drive use file name of respective device,
   it depends on the operating system of client machine.
   Example for Windows clients - d:
   Example for Linux clients - /dev/cdrom
Build backward compatibility:
   The feature can be disabled by build configuration:
   --enable-cdsharing=no disables CD sharing (USB redirection
     GUI uses new USB redirection widget)
   --enable-newusbwidget=no also disables CD sharing (USB
     redirection GUI uses old USB widget)
Notes for Windows build of 'VirtViewer':
   In order to show proper icons in new USB redirection widget
   the installation package of VirtViewer shall include
   following icons:
   "media-optical", "network-transmit-receive", "network-offline",
   "dialog-warning", "dialog-information",
   "preferences-system","system-lock-screen","media-eject",
   "edit-delete", "list-add"
Automatic redirection of emulated CD devices:
   Same as one for local USB drives:
   - shared CD devices created by command line redirected
     according to 'redirect-on-connect' filter
   - shared CD devices created during session redirected
     according to 'auto-redirect' filter
Disable redirection of emulated CD devices on server side:
   

--- a/configure.ac
+++ b/configure.ac
@@ -349,6 +349,32 @@ else
 fi
 AM_CONDITIONAL([WITH_USBREDIR], [test "x$have_usbredir" = "xyes"])
 
+AC_ARG_ENABLE([newusbwidget],
+  AS_HELP_STRING([--enable-newusbwidget=@<:@yes/no@:>@],
+                 [Use new USB devices widget @<:@default=yes@:>@]),
+  [],
+  [enable_newusbwidget="yes"])
+
+AC_ARG_ENABLE([cdsharing],
+  AS_HELP_STRING([--enable-cdsharing=@<:@auto/yes/no@:>@],
+                 [Enable CD charing feature @<:@default=auto@:>@]),
+  [],
+  [enable_cdsharing="auto"])
+
+if test "x$enable_newusbwidget" = "xno" || test "x$have_usbredir" != "xyes" ; then
+  have_newusbwidget="no"
+else
+  have_newusbwidget="yes"
+  AC_DEFINE([USE_NEW_USB_WIDGET], [1], [Define if new USB widget should be used])
+fi
+
+if test "x$enable_cdsharing" = "xno" || test "x$have_newusbwidget" = "xno"; then
+  have_cdsharing="no"
+else
+  have_cdsharing="yes"
+  AC_DEFINE([USE_CD_SHARING], [1], [Define if supporting cd sharing via usbredir])
+fi
+
 AC_ARG_ENABLE([polkit],
   AS_HELP_STRING([--enable-polkit=@<:@auto/yes/no@:>@],
                  [Enable PolicyKit support (for the usb acl helper)@<:@default=auto@:>@]),
@@ -605,6 +631,7 @@ AC_MSG_NOTICE([
         SASL support:             ${have_sasl}
         Smartcard support:        ${have_smartcard}
         USB redirection support:  ${have_usbredir} ${with_usbredir_hotplug}
+        CD sharing support:       ${have_cdsharing} new widget: ${have_newusbwidget}
         DBus:                     ${have_dbus}
         WebDAV support:           ${have_phodav}
         LZ4 support:              ${have_lz4}
