--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "spice-common"]
 	path = subprojects/spice-common
-	url = ../spice-common.git
+	url =  https://gitlab.freedesktop.org/spice/spice-common.git
 [submodule "src/keycodemapdb"]
 	path = src/keycodemapdb
 	url = https://gitlab.com/keycodemap/keycodemapdb.git
