Allows to enable recorder integration
recorder library will be used to collect some statistics during
development.

Signed-off-by: Frediano Ziglio <fziglio@redhat.com>
Acked-by: Victor Toso <victortoso@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -120,6 +120,7 @@ PKG_CHECK_EXISTS(openssl,
   [SPICE_GLIB_REQUIRES="${SPICE_GLIB_REQUIRES} openssl"],
   [SPICE_GLIB_LIBS="${SPICE_GLIB_LIBS} ${SSL_LIBS}"])
 
+SPICE_CHECK_RECORDER
 SPICE_CHECK_SASL
 
 AC_MSG_CHECKING([which gtk+ version to compile against])
